# aflowey

./: .cookiecutter.json  .gitignore  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt  usage.rst
src/aflow/: __init__.py  __main__.py  f.py
src/aflowey/: __init__.py  async_flow.py  context.py  executor.py  f.py  flow_yaml_spec.py  functions.py  runner.py  single_executor.py  types.py
tests/: __init__.py  test_aflow.py  test_main.py
